[workspace]
resolver = "3"
members = ["core", "datasources/*", "decoders/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
borsh = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
log = "0.4"
mea = "0.6"
silicon-core = { path = "core" }
silicon-meteora-damm-v2-decoder = { path = "decoder/meteora-damm-v2-decoder" }
silicon-meteora-dbc-decoder = { path = "decoder/meteora-dbc-decoder" }
silicon-yellowstone-grpc-datasource = { path = "datasources/yellowstone-grpc-datasource" }
solana-account = "3"
solana-address = "2"
solana-clock = "3"
solana-hash = { version = "4", default-features = false }
solana-instruction = { version = "3", default-features = false }
solana-message = "3"
solana-signature = "3"
solana-system-interface = "3"
solana-transaction = "3"
solana-transaction-status-client-types = "3"
tokio = { version = "1", default-features = false }
yellowstone-grpc-client = "11"
yellowstone-grpc-proto = { version = "11", default-features = false }
