[package]
name = "silicon-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
mea = { workspace = true }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-clock = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-status-client-types = { workspace = true, features = [
  "agave-unstable-api"
] }
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
