[package]
name = "silicon-jito-protos"
version.workspace = true
edition.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, features = ["codegen", "transport"] }
tonic-prost = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-prost-build = { workspace = true, features = ["transport"] }
